# ca-bhfuil

./: .dockerignore  .env.example  .evn.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  README.rst  alembic.ini  ca_bhfuil_restructure_plan.md  dependency_changes.md  pyproject.toml  requirements-all.txt  setup.cfg  setup.py
.github/workflows/: build-and-release.yml  ci.yml  deps.yml  release.yml
ai/memory/: ai-style-guide.md  architecture-decisions.md  async-conversion-plan.md  async-conversion-tasks.md  bootstrap-tasks.md  current-focus.md  data-model-implementation-plan.md  patterns.md  project-context.md  project-status.md  session-commands.md  session-management-fix-plan.md
alembic/: env.py  script.py.mako
alembic/versions/: dcae6eb4b2fd_initial_database_schema_creation.py
docs/: CONTAINER_USAGE.md  cli-reference.md  code-style.md
docs/contributor/: DEVELOPMENT.md  code-style.md
docs/contributor/design/: architecture-overview.md  concurrency.md  data-model-architecture.md  data-storage-design.md  development-workflow.md  project-vision.md  repository-management.md  technology-decisions.md
docs/contributor/design/archive/: packaging.md
docs/contributor/design/draft/: data-model-architecture.md  knowlage-graph.md
docs/design/: README.md  architecture-overview.md  ci-design.md  cli-design-patterns.md  cli-design.md  git-repository-management.md  packaging.md  project-vision.md  repository-management.md  repository-structure.md  technology-decisions.md  technology-stack.md
docs/design/archive/: README.md  project-vision.md  technology-stack.md
docs/user/: cli-reference.md
scripts/: bash-completion.sh  build-container.sh  ca-bhfuil-completion.bash  fix-imports.py  style-check.sh  style-fix.sh
src/ca_bhfuil/: __init__.py  __main__.py  main.py
src/ca_bhfuil/cli/: __init__.py  async_bridge.py  completion.py  main.py  operations.py
src/ca_bhfuil/core/: __init__.py  async_config.py  async_errors.py  async_monitor.py  async_progress.py  async_registry.py  async_repository.py  async_sync.py  async_tasks.py  config.py  migration.py  registry.py  sync.py
src/ca_bhfuil/core/git/: async_git.py  clone.py  repository.py
src/ca_bhfuil/core/managers/: __init__.py  base.py  factory.py  repository.py
src/ca_bhfuil/core/models/: __init__.py  commit.py  progress.py  results.py
src/ca_bhfuil/integrations/: async_http.py
src/ca_bhfuil/storage/: __init__.py  alembic_interface.py  async_database.py  sqlmodel_manager.py
src/ca_bhfuil/storage/cache/: __init__.py  diskcache_wrapper.py
src/ca_bhfuil/storage/database/: __init__.py  engine.py  models.py  repository.py  schema.py
src/ca_bhfuil/testing/: __init__.py  alembic_utils.py
src/ca_bhfuil/utils/: paths.py
tests/: conftest.py
tests/fixtures/: alembic.py  async_fixtures.py  repositories.py
tests/integration/: conftest.py  test_async_integration.py  test_cli_manager_integration.py  test_repo_add_sync_workflow.py  test_repo_cloning.py
tests/unit/: test_alembic_utils.py  test_async_components.py  test_async_git.py  test_async_progress_enhanced.py  test_async_registry.py  test_async_repository_manager.py  test_async_sync.py  test_base_manager.py  test_cli.py  test_cli_completion.py  test_cli_operations.py  test_cli_repo.py  test_commit_info_enhancements.py  test_git_clone.py  test_git_repository.py  test_main_entry.py  test_manager_factory.py  test_manager_resource_management.py  test_repo_config.py  test_repository_manager.py  test_repository_registry.py  test_sqlmodel_database.py  test_sync.py
